# coding-kata

./: .gitignore  README.md
gilded-rose/gilded-rose-220706/test/cpp_googletest_unittest/: GildedRoseGoogletestUnitTests.cc
string-calculator/: README.md
string-calculator/string-calculator-220620/: CMakeLists.txt
string-calculator/string-calculator-220620/src/: CMakeLists.txt  calculator.cpp  calculator.h
string-calculator/string-calculator-220620/test/: CMakeLists.txt  calculator_tests.cpp
string-calculator/string-calculator-220621/: CMakeLists.txt
string-calculator/string-calculator-220621/src/: CMakeLists.txt  Calculator.cpp  Calculator.h
string-calculator/string-calculator-220621/test/: CMakeLists.txt  CalculatorTests.cpp
string-calculator/string-calculator-220626/: CMakeLists.txt
string-calculator/string-calculator-220626/src/: CMakeLists.txt  Calculator.cpp  Calculator.h
string-calculator/string-calculator-220626/test/: CMakeLists.txt  CalculatorTests.cpp
string-calculator/string-calculator-220627/: CMakeLists.txt
string-calculator/string-calculator-220627/src/: Calculator.cpp  Calculator.h
string-calculator/string-calculator-220627/test/: CalculatorTests.cpp
string-calculator/string-calculator-220628/: CMakeLists.txt
string-calculator/string-calculator-220628/src/: CMakeLists.txt  Calculator.cpp  Calculator.h
string-calculator/string-calculator-220628/test/: CMakeLists.txt  CalculatorTests.cpp  CalculatorTests.h
string-calculator/string-calculator-220702/: CMakeLists.txt
string-calculator/string-calculator-220702/source/: Calculator.cpp  Calculator.h
string-calculator/string-calculator-220702/test/: CMakeLists.txt  CalculatorTest.cpp  CalculatorTest.h
string-calculator/string-calculator-220703/: CMakeLists.txt
string-calculator/string-calculator-220703/source/: Calculator.cpp  Calculator.h
string-calculator/string-calculator-220703/test/: CMakeLists.txt  CalculatorTest.cpp  CalculatorTest.h
string-calculator/string-calculator-220704/: CMakeLists.txt
string-calculator/string-calculator-220704/source/: CMakeLists.txt  Calculator.cpp  Calculator.h
string-calculator/string-calculator-220704/test/: CalculatorTest.cpp  CalculatorTest.h
string-calculator/string-calculator-220705/: CMakeLists.txt
string-calculator/string-calculator-220705/source/: Calculator.cpp  Calculator.h
string-calculator/string-calculator-220705/test/: CMakeLists.txt  CalculatorTests.cpp  CalculatorTests.h
